2002-08-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlutils.py (XMLElement.__str__): now adds spaces in
	empty elements for user-agent compatibility with xhtml.

	* pylibs/ecs/__init__.py, xhtml.py: An ECS-clone for Python.  Uses
	xmlutils.  Now I need to add a parser, and support comments, etc.

2002-08-16  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/formlib/set.py, pylibs/formlib/state.py, pylibs/formlib/reqs:
	added beginnings of formlib

	* SkunkWeb/sw.conf.in: added userModuleCleanupIgnore and some
	extra docs.

	* SkunkWeb/SkunkWeb/Server.py (SkunkWebServer.postHandle): added
	config option userModuleCleanupIgnore so you can specify module
	prefixes that the umc cleaner should not clean

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.typeCheckAndConvert): added
	check for longtype.

2002-08-15  Andrew Csillag  <drew@localhost.localdomain>

	* 3.3 cut

2002-08-13  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/extcgi.py: now logs the signal number of the
	signal that caused the CGI program to die, when it dies by signal

	* pylibs/AE/Component.py: added rectifyRelativeName, which is just
	an alias of _rectifyRelativeName.

	* docs/devel/ae.tex, docs/devel/devel.tex: updates
	

2002-08-12  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/PyDO/sqliteconn.py (PyDOSqlite.getAutoIncrement): I
	forgot that the CVS version of pysqlite exposed the function that
	returns the last insert rowid; now am using it and solved my
	auto-increment problem.

	* pylibs/static.py (Sissubclass): patch (from Drew) so that it
	returns 0 rather than inappropriately raising an exception.

	* pylibs/PyDO/sqliteconn.py (test): fixes, now that I have patched
	pysqlite to deal correctly with rowcount.  The way I have
	auto_increment working here isn't very pleasing, however.

2002-08-09  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/AE/cacheKey/cachekey.c: removed circularity checking
	which caused core dumps under load.
